--- a/assets/custom-bootstrap.css
+++ b/assets/custom-bootstrap.css
@@ -39,6 +39,20 @@
   scale: 1.05;
 }
 
+.btn-custom4 {
+  background-color: rgba(0, 0, 0, 0);
+  color: white;
+  padding: 7px 26px;
+  border-width: 1px;
+  border-color: white;
+  border-radius: 10px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+.btn-custom4:hover {
+  scale: 1.05;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
