css artist page + fixes + href home

--- a/assets/custom-bootstrap.css
+++ b/assets/custom-bootstrap.css
@@ -234,6 +234,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #171717;
+  --bs-secondary2: #a0a0a0;
   --bs-dark2: #000000;
   --bs-primary-rgb: 30, 215, 96;
   --bs-secondary-rgb: 44, 44, 44;
@@ -243,6 +244,7 @@
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 23, 23, 23;
+  --bs-secondary2-rgb: 160, 160, 160;
   --bs-dark2-rgb: 0, 0, 0;
   --bs-primary-text-emphasis: #052c65;
   --bs-secondary-text-emphasis: #2b2f32;
@@ -3344,6 +3346,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #171717;
 }
 
+.btn-secondary2 {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #a0a0a0;
+  --bs-btn-border-color: #a0a0a0;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #aeaeae;
+  --bs-btn-hover-border-color: #aaaaaa;
+  --bs-btn-focus-shadow-rgb: 136, 136, 136;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #b3b3b3;
+  --bs-btn-active-border-color: #aaaaaa;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #a0a0a0;
+  --bs-btn-disabled-border-color: #a0a0a0;
+}
+
 .btn-dark2 {
   --bs-btn-color: #fff;
   --bs-btn-bg: #000000;
@@ -3494,6 +3513,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #171717;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #171717;
+  --bs-gradient: none;
+}
+
+.btn-outline-secondary2 {
+  --bs-btn-color: #a0a0a0;
+  --bs-btn-border-color: #a0a0a0;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #a0a0a0;
+  --bs-btn-hover-border-color: #a0a0a0;
+  --bs-btn-focus-shadow-rgb: 160, 160, 160;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #a0a0a0;
+  --bs-btn-active-border-color: #a0a0a0;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #a0a0a0;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #a0a0a0;
   --bs-gradient: none;
 }
 
@@ -5139,6 +5175,13 @@ textarea.form-control-lg {
   --bs-alert-link-color: var(--bs-dark-text-emphasis);
 }
 
+.alert-secondary2 {
+  --bs-alert-color: var(--bs-secondary2-text-emphasis);
+  --bs-alert-bg: var(--bs-secondary2-bg-subtle);
+  --bs-alert-border-color: var(--bs-secondary2-border-subtle);
+  --bs-alert-link-color: var(--bs-secondary2-text-emphasis);
+}
+
 .alert-dark2 {
   --bs-alert-color: var(--bs-dark2-text-emphasis);
   --bs-alert-bg: var(--bs-dark2-bg-subtle);
@@ -5549,6 +5592,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-dark-bg-subtle);
   --bs-list-group-active-bg: var(--bs-dark-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-dark-text-emphasis);
+}
+
+.list-group-item-secondary2 {
+  --bs-list-group-color: var(--bs-secondary2-text-emphasis);
+  --bs-list-group-bg: var(--bs-secondary2-bg-subtle);
+  --bs-list-group-border-color: var(--bs-secondary2-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-secondary2-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-secondary2-border-subtle);
+  --bs-list-group-active-color: var(--bs-secondary2-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-secondary2-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-secondary2-text-emphasis);
 }
 
 .list-group-item-dark2 {
@@ -7088,6 +7144,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-dark-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-secondary2 {
+  color: #000 !important;
+  background-color: RGBA(var(--bs-secondary2-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .text-bg-dark2 {
   color: #fff !important;
   background-color: RGBA(var(--bs-dark2-rgb), var(--bs-bg-opacity, 1)) !important;
@@ -7163,6 +7224,15 @@ textarea.form-control-lg {
 .link-dark:hover, .link-dark:focus {
   color: RGBA(18, 18, 18, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(18, 18, 18, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-secondary2 {
+  color: RGBA(var(--bs-secondary2-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-secondary2-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-secondary2:hover, .link-secondary2:focus {
+  color: RGBA(179, 179, 179, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(179, 179, 179, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-dark2 {
@@ -7610,6 +7680,10 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-dark-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-secondary2 {
+  --bs-focus-ring-color: rgba(var(--bs-secondary2-rgb), var(--bs-focus-ring-opacity));
+}
+
 .focus-ring-dark2 {
   --bs-focus-ring-color: rgba(var(--bs-dark2-rgb), var(--bs-focus-ring-opacity));
 }
@@ -7772,6 +7846,11 @@ textarea.form-control-lg {
 .border-dark {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-dark-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-secondary2 {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-secondary2-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-dark2 {
@@ -8614,7 +8693,7 @@ textarea.form-control-lg {
 }
 
 .fs-0 {
-  font-size: calc(1.625rem + 4.5vw) !important;
+  font-size: calc(1.525rem + 3.3vw) !important;
 }
 
 .fs-7 {
@@ -8774,6 +8853,11 @@ textarea.form-control-lg {
 .text-dark {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-secondary2 {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-secondary2-rgb), var(--bs-text-opacity)) !important;
 }
 
 .text-dark2 {
@@ -8983,6 +9067,11 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-dark-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-secondary2 {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-secondary2-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline-dark2 {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-dark2-rgb), var(--bs-link-underline-opacity)) !important;
@@ -9079,6 +9168,11 @@ textarea.form-control-lg {
 .bg-dark {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-secondary2 {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-secondary2-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-dark2 {
@@ -12261,7 +12355,7 @@ textarea.form-control-lg {
     font-size: 1.5rem !important;
   }
   .fs-0 {
-    font-size: 5rem !important;
+    font-size: 4rem !important;
   }
 }
 @media print {
