--- a/assets/css/Bottoni.css
+++ b/assets/css/Bottoni.css
@@ -73,3 +73,101 @@
     .bi-heart, .bi-arrow-down-circle, .bi-three-dots {
       margin-left: 0.3rem; 
     }
+
+    .bg-secondary {
+     width: 100%; 
+     background-color: #33333396;  
+     color: #fff; 
+    }
+
+    .bi-shuffle {
+      width: 25px; 
+      height: 25px; 
+      margin-left: 10em; 
+    }
+
+    
+
+    #player {
+      input[type="range"].form-range {
+        appearance: none;
+        width: 100%;
+        height: 8px;
+        background: #007bff;
+        border-radius: 5px;
+        outline: none;
+        transition: background 0.3s ease;
+      }
+    
+      input[type="range"].form-range::-webkit-slider-thumb {
+        appearance: none;
+        width: 0;
+        height: 0;
+        background: transparent;
+      }
+    
+      /* Disabilita il pallino per Firefox */
+      input[type="range"].form-range::-moz-range-thumb {
+        width: 0;
+        height: 0;
+        background: transparent;
+      }
+    
+      input[type="range"].form-range:focus {
+        background: #0056b3;
+      }
+    }
+    
+    
+    #volume {
+      -webkit-appearance: none; 
+      appearance: none; 
+      width: 80px; 
+      height: 8px; 
+      background: white; 
+      border-radius: 5px; 
+      outline: none; 
+      transition: background 0.3s ease; 
+    }
+    
+    
+    #volume::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 20px; 
+      height: 20px; 
+      border-radius: 50%; 
+      background: white; 
+      cursor: pointer; 
+    }
+    
+  
+    #volume::-moz-range-thumb {
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background: white;
+      cursor: pointer;
+    }
+    
+    /* Modifica il colore della barra quando si passa sopra con il mouse */
+    #volume:hover {
+      background: white; /* Colore della barra quando hover */
+    }
+    
+    /* Cambia il colore del pallino quando è in focus */
+    #volume:focus::-webkit-slider-thumb {
+      background: white; /* Colore del pallino in focus */
+    }
+    
+    #nav-mobile {
+      width: 75%;
+      background-image: linear-gradient(
+        to top,
+        #000000,
+        #000000,
+        #00000091,
+        #00000075,
+        #ffffff00
+      );
+    }
